--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,5 @@
 RedirectMatch 404 /\.git(/|$)
 RedirectMatch 404 /\.gitignore$
+RedirectMatch 404 /config.ini$
+RedirectMatch 404 /logs(/|$)
+RedirectMatch 404 \.cache$
