--- a/.htaccess
+++ b/.htaccess
@@ -3,3 +3,4 @@ RedirectMatch 404 /\.gitignore$
 RedirectMatch 404 /config.ini$
 RedirectMatch 404 /logs(/|$)
 RedirectMatch 404 \.cache$
+RedirectMatch 404 /cache
